# ghg-emissions

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  app.py  ca_epc_schema.xml  implementation_plan.md  pyproject.toml  requirements.txt  ruff.toml  test_connection.py  test_simple_connection.py  weca-brand.json
.claude/: settings.json  settings.local.json
.streamlit/: config.toml  secrets.toml
agent-docs/: cli-tools-memory.md  responses-to-claude-init-questions.md  technical-learnings.md
claude-ignore/: get_schema.py
pages/: 1_📊_Emissions_Overview.py  2_🗺️_Geographic_Analysis.py  3_🏘️_EPC_Analysis.py  4_💡_Insights.py
schema/: enriched-schema.xml  schema.sql
scripts/: install_pkgs.sh
src/components/: exports.py  filters.py
src/data/: connections.py  loaders.py  mock_data.py  transforms.py  validators.py
src/utils/: config.py
src/visualization/: charts.py  maps.py  themes.py
tests/: conftest.py
tests/unit/: test_connections.py  test_loaders.py  test_transforms.py  test_validators.py
