[project]
name = "ghg-emissions"
version = "0.1.0"
description = "Dashboard for greenhouse gas emissions data analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "duckdb>=1.4.0",
    "polars>=1.32.0",
    "httpx>=0.27.0",
    "pyyaml",
    "pyarrow",
    "streamlit>=1.51.0",
    "plotly>=6.5.0",
    "folium>=0.20.0",
    "streamlit-folium>=0.25.3",
    "altair>=5.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

